--- a/modules/nf-core/mafft/guidetree/meta.yml
+++ b/modules/nf-core/mafft/guidetree/meta.yml
@@ -1,69 +1,47 @@
----
-# yaml-language-server: $schema=https://raw.githubusercontent.com/nf-core/modules/master/modules/meta-schema.json
-name: "mafft_guidetree"
-## TODO nf-core: Add a description of the module and list keywords
-description: write your description here
+name: mafft_guidetree
+description: Multiple sequence alignment using MAFFT
 keywords:
-  - sort
-  - example
-  - genomics
+  - fasta
+  - msa
+  - multiple sequence alignment
 tools:
   - "mafft":
-      ## TODO nf-core: Add a description and other details for the software below
-      description: "Multiple alignment program for amino acid or nucleotide sequences based on fast Fourier transform"
-      homepage: "None"
-      documentation: "None"
-      tool_dev_url: "None"
-      doi: ""
-      licence: ['BSD']
+      description: Multiple alignment program for amino acid or nucleotide sequences
+        based on fast Fourier transform
+      homepage: https://mafft.cbrc.jp/alignment/software/
+      documentation: https://mafft.cbrc.jp/alignment/software/manual/manual.html
+      tool_dev_url: https://mafft.cbrc.jp/alignment/software/source.html
+      doi: "10.1093/nar/gkf436"
+      licence: ["BSD"]
       identifier: biotools:MAFFT
-
-## TODO nf-core: Add a description of all of the variables used as input
 input:
-  # Only when we have meta
   - - meta:
         type: map
         description: |
           Groovy Map containing sample information
-          e.g. `[ id:'sample1', single_end:false ]`
-  
-  ## TODO nf-core: Delete / customise this example input
-    - bam:
+          e.g. [ id:'test' ]
+    - fasta:
         type: file
-        description: Sorted BAM/CRAM/SAM file
-        pattern: "*.{bam,cram,sam}"
-        ontologies:
-          - edam: "http://edamontology.org/format_25722"
-          - edam: "http://edamontology.org/format_2573"
-          - edam: "http://edamontology.org/format_3462"
-          
-
-## TODO nf-core: Add a description of all of the variables used as output
+        description: FASTA file containing the sequences to be used to render the guidetree.
+        pattern: "*.{fa,fasta}"
 output:
-  - bam:
-  #Only when we have meta
-    - meta:
-        type: map
-        description: |
-          Groovy Map containing sample information
-          e.g. `[ id:'sample1', single_end:false ]`
-  ## TODO nf-core: Delete / customise this example output
-    - "*.bam":
-        type: file
-        description: Sorted BAM/CRAM/SAM file
-        pattern: "*.{bam,cram,sam}"
-        ontologies:
-          - edam: "http://edamontology.org/format_25722"
-          - edam: "http://edamontology.org/format_2573"
-          - edam: "http://edamontology.org/format_3462"
-          
+  - fas:
+      - meta:
+          type: map
+          description: |
+            Groovy Map containing sample information
+            e.g. [ id:'test']
+      - "*.dnd":
+          type: file
+          description: Aligned sequences in FASTA format. May be gzipped or uncompressed.
+          pattern: "*.dnd"
   - versions:
-    - "versions.yml":
-        type: file
-        description: File containing software versions
-        pattern: "versions.yml"
-
+      - versions.yml:
+          type: file
+          description: File containing software versions
+          pattern: "versions.yml"
 authors:
   - "@luisas"
 maintainers:
   - "@luisas"
+
